--- a/messaging.html
+++ b/messaging.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/dashboard.css">
+    <link rel="stylesheet" type="text/css" href="css/messaging.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
@@ -22,16 +22,27 @@
       <div class="col-3 navItem">SIGN OUT</div>
   </nav>
 
-<div id="addNew" class="row">
-    <div class="addNewText">Want to add new item?</div>
-    <div><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-      ADD ITEM
-    </button></div>
+  <div class="row">
 
-  <!-- Colored raised button -->
+    <div id="sideNav" class="sideNav row_nav">
+      <div class="header">RECIPIENTS</div>
+      <div><a href="" class="">BOLU</a></div>
+    </div>
+
+    <div id="messages" class="others">
+      <div class="message">
+        Hi man!
+      </div>
+      <div class="input">
+        <input placeholder="Enter message">
+      </div>
+    </div>
 
 
-</div>
+
+  </div>
+
+
 
 </body>
 
