--- a/dashboard.html
+++ b/dashboard.html
@@ -2,38 +2,70 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/dashboard.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
-    <script src="js/jQuery.js"></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/dashboard.css" rel="stylesheet">
     <title>Title</title>
 </head>
-
 <body>
 
-  <nav class="row nav">
-      <div class="col-3 navItem">STORE</div>
-      <div class="col-3 navItem">DASHBOARD</div>
-      <div class="col-3 navItem">MESSAGES</div>
-      <div class="col-3 navItem">SIGN OUT</div>
-  </nav>
+    <nav class="row text-center nav">
+        <div class="col-md-4 company-name">VARMAZON</div>
+        <div class="col-md-2 tabs">HOME</div>
+        <div class="col-md-2 tabs">DASHBOARD</div>
+        <div class="col-md-2 tabs">MESSAGING</div>
+        <div class="col-md-2 tabs">SIGN OUT</div>
+    </nav>
 
-<div id="addNew" class="row">
-    <div class="addNewText">Want to add new item?</div>
-    <div><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-      ADD ITEM
-    </button></div>
+    <div class="existing Items">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card ">
+                    <div class="card-image"><img src="img/varmazon_logo.png" class="card_img"></div>
+                    <div class="card-name">SAMSUNG GALAXY S8</div>
+                    <div class="card-price">$50</div>
+                    <div class="card-description">tgjykhjiouytjyhmjhihyujgghm</div>
+                    <div class="card-button">EDIT</div>
+                </div>
+            </div>
 
-  <!-- Colored raised button -->
+            <div class="col-md-3">
+                <div class="card ">
+                    <div class="card-image"><img src="img/varmazon_logo.png" class="card_img"></div>
+                    <div class="card-name">SAMSUNG GALAXY S8</div>
+                    <div class="card-price">$50</div>
+                    <div class="card-description">tgjykhjiouytjyhmjhihyujgghm</div>
+                    <div class="card-button">EDIT</div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card ">
+                    <div class="card-image"><img src="img/varmazon_logo.png" class="card_img"></div>
+                    <div class="card-name">SAMSUNG GALAXY S8</div>
+                    <div class="card-price">$50</div>
+                    <div class="card-description">tgjykhjiouytjyhmjhihyujgghm</div>
+                    <div class="card-button">EDIT</div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card ">
+                    <div class="card-image"><img src="img/varmazon_logo.png" class="card_img"></div>
+                    <div class="card-name">SAMSUNG GALAXY S8</div>
+                    <div class="card-price">$50</div>
+                    <div class="card-description">tgjykhjiouytjyhmjhihyujgghm</div>
+                    <div class="card-button">EDIT</div>
+                </div>
+            </div>
+
+        </div>
 
 
-</div>
+    </div>
+
+    <div class="button">
+        <button>+</button>
+    </div>
 
 </body>
-
-
 </html>
