--- a/home.html
+++ b/home.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Varmazon</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/dashboard.css" rel="stylesheet">
-    <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="js/jQuery.js"></script>
-    <title>Title</title>
 </head>
 <body>
-
     <nav class="row text-center nav">
         <div class="col-md-4 company-name"><a id="varmazon">VARMAZON</a></div>
         <div class="col-md-2 tabs"><a id="home">HOME</a></div>
@@ -22,10 +20,6 @@
 
     </div>
 
-    <div class="button">
-        <button id="addNew">+</button>
-    </div>
-
 </body>
-<script src="js/dashboard.js" rel="script" type="text/javascript"></script>
+<script src="js/home.js"></script>
 </html>
