--- a/newItem.html
+++ b/newItem.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/newItem.css" rel="stylesheet">
-
+    <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="js/jQuery.js" rel="script" type="text/javascript"></script>
     <title>Title</title>
 </head>
 <body>
 
-    <nav class="row text-center nav">
-        <div class="col-md-4 company-name">VARMAZON</div>
-        <div class="col-md-2 tabs">HOME</div>
-        <div class="col-md-2 tabs">DASHBOARD</div>
-        <div class="col-md-2 tabs">MESSAGING</div>
-        <div class="col-md-2 tabs">SIGN OUT</div>
-    </nav>
+<nav class="row text-center nav">
+    <div class="col-md-4 company-name"><a id="varmazon">VARMAZON</a></div>
+    <div class="col-md-2 tabs"><a id="home">HOME</a></div>
+    <div class="col-md-2 tabs"><a id="dashboard">DASHBOARD</a></div>
+    <div class="col-md-2 tabs"><a id="messaging">MESSAGING</a></div>
+    <div class="col-md-2 tabs"><a id="signout">SIGN OUT</a></div>
+</nav>
 
     <div class="form">
         <div class="itsMargin">
