--- a/messaging.html
+++ b/messaging.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <nav class="row text-center nav">
-        <div class="col-md-4">LOGO</div>
-        <div class="col-md-2">HOME</div>
-        <div class="col-md-2">DASHBOARD</div>
-        <div class="col-md-2">MESSAGING</div>
-        <div class="col-md-2">SIGN OUT</div>
+        <div class="col-md-4 company-name"><a id="varmazon">VARMAZON</a></div>
+        <div class="col-md-2 tabs"><a id="home">HOME</a></div>
+        <div class="col-md-2 tabs"><a id="dashboard">DASHBOARD</a></div>
+        <div class="col-md-2 tabs"><a id="messaging">MESSAGING</a></div>
+        <div class="col-md-2 tabs"><a id="signout">SIGN OUT</a></div>
     </nav>
 
     <div class="row mess">
