--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <title>Varmazon</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/dashboard.css" rel="stylesheet">
+    <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="js/jQuery.js"></script>
 </head>
 <body>
